# nao_play_soccer

./: README.md  hello_nao.py
.qi/: path.conf  worktree.xml
choreographs/: caida1.xar  caida2.xar  kick.xar
goalkeeper/: CMakeLists.txt  goalkeeper.cpp  goalkeeper.h  main.cpp  qiproject.xml
goalkeeper/build-sys-linux-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
opencvVision/: BallDetection  BallDetection.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cannyhough.cpp  cmake_install.cmake
shooter/: CMakeLists.txt  main.cpp  qiproject.xml  shooter.cpp  shooter.h
shooter/build-sys-linux-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
vision/: BallDetection.cpp  CMakeLists.txt  main.cpp  qiproject.xml  vision.cpp  vision.h
vision/build-cross-atom/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
vision/build-sys-linux-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
